cluster/apps/networking/traefik/app/ingresses/attic.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: attic
  namespace: networking
  annotations:
    coredns.io/hostname: "attic.${SECRET_DEV_DOMAIN}"
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  ingressClassName: traefik
  rules:
    - host: &host "attic.${SECRET_DEV_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: attic
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - *host
      secretName: *host
---
apiVersion: v1
kind: Service
metadata:
  name: attic
  namespace: networking
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
---
apiVersion: v1
kind: Endpoints
metadata:
  name: attic
  namespace: networking
subsets:
  - addresses:
      - ip: "10.2.111.34"
    ports:
      - port: 8080
---
