cluster/apps/networking/traefik/app/ingresses/kubeapi.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-api
  namespace: default
spec:
  selector:
    component: apiserver
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: kubernetes-api-ingress
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`kubeapi.dh274.com`)
      services:
        - name: kubernetes-api
          port: 443
  tls:
    passthrough: true
