cluster/apps/networking/traefik/app/ingresses/openhaystack.yaml
kind: Service
apiVersion: v1
metadata:
  name: openhaystack
  namespace: networking
spec:
  type: ExternalName
  ports:
    - name: https
      port: 443
      targetPort: 8080
  externalName: 10.2.111.13
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openhaystack
  namespace: networking
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
      #traefik.ingress.kubernetes.io/router.middlewares: networking-chain-authentik@kubernetescrd
    external-dns.home.arpa/enabled: "true"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - &host "ohs.${SECRET_DEV_DOMAIN}"
      secretName: *host
  rules:
    - host: *host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openhaystack
                port:
                  number: 8080
---
