cluster/apps/networking/traefik/app/ingresses/traefik.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: networking
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    hajimari.io/appName: "traefik"
    hajimari.io/enable: "true"
    hajimari.io/icon: "simple-icons:Traefik Proxy"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: networking-chain-authentik@kubernetescrd
    external-dns.home.arpa/enabled: "true"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - &host "traefik.${SECRET_DEV_DOMAIN}"
      secretName: *host
  rules:
    - host: *host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 9000
---
